*Service: Resemble Settings API of EmuDriver